test/libhyperion/syntaxTests/functionTypes/function_type_parameter.hyp
contract C {
    uint x;
    function f(function(uint) external returns (uint) g) public returns (function(uint) external returns (uint)) {
        x = 2;
        return g;
    }
}
// ----
// TypeError 4888: (40-80): External function types are not supported with this address size: address (512 bits) plus selector (32 bits) exceeds the VM word size (512 bits).
